--- a/gui/hypr/hyprland.conf
+++ b/gui/hypr/hyprland.conf
@@ -318,6 +318,7 @@ exec-once = wl-paste --watch cliphist store
 exec-once = hypridle
 exec-once = waybar
 exec-once = systemctl --user enable --now hyprpaper.service
+exec-once = systemctl --user enable --now hypridle.service
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = [workspace 2 silent] $terminal
 
@@ -328,22 +329,6 @@ workspace = 3,monitor:DP-1
 workspace = 4,monitor:DP-1
 workspace = 5,monitor:DP-2
 workspace = 6,monitor:DP-2
-
-#windowrule = suppressevent maximize, class:.*
-# Fix some dragging issues with XWayland
-# windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-
-# Hide ly display manager ghost window after login
-windowrulev2 = opacity 0 0, class:^$, title:^$
-windowrulev2 = nofocus, class:^$, title:^$
-windowrulev2 = noinitialfocus, class:^$, title:^$
-windowrulev2 = noblur, class:^$, title:^$
-windowrulev2 = noshadow, class:^$, title:^$
-
-windowrulev2 = tag +fakefullscreen, title:(Path of Exile),class:(steam_app_238960)
-windowrulev2 = tile, tag:fakefullscreen
-windowrulev2 = noborder, tag:fakefullscreen
-
 
 vfr = true
 vrr = 1
